crates/reinhardt-db-macros/tests/ui/fail/unknown_field_attribute.stderr
error: unknown flag attribute `requried`
 --> tests/ui/fail/unknown_field_attribute.rs:8:13
  |
8 |     #[field(requried)]
  |             ^^^^^^^^
